--- a/frontend/src/Video.css
+++ b/frontend/src/Video.css
@@ -10,6 +10,8 @@
   flex: 1;
   display: flex;
   position: relative;
+  width: 100%;
+  height: 100vh;
 }
 
 #remote-video {
@@ -22,11 +24,11 @@
 
 #user-video {
   position: absolute;
-  border-radius: 10px;
+  border-radius: 1.5rem;
   object-fit: cover;
   z-index: 10;
-  right: 20px;
-  bottom: 80px;
+  top: 0;
+  right: 0;
 }
 
 @media (min-width: 768px) {
